--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.4 || ^8.0",
-        "codeigniter4/framework": "^4.0"
+        "codeigniter4/framework": "^4.0",
+        "fpdf/fpdf": "^1.85",
+        "setasign/fpdf": "^1.8",
+        "setasign/fpdi": "^2.3",
+        "spipu/html2pdf": "^5.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
